<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symptom Manager</string>
    <string name="splash">spalsh image</string>
    <string name="title_server">Server Information</string>
    <string name="hint_server">Server</string>
    <string name="https">https://</string>
    <string name="port">Port: 8443</string>
    <string name="title_credentials">Account Information</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="info_login">Please enter only the IP address of the server</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="login_activity_title">Please Login</string>
    <string name="welcome_doctor">Welcome Doctor</string>
    <string name="patients">Patients</string>
    <string name="no_internet">You must have an active internet connection</string>
    <string name="add_patient">Add Patient</string>
    <string name="remove_patient">Remove Patient</string>
    <string name="add_profile">Create Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="Dr">Dr.</string>
    <string name="add_phone">Add Phone Number</string>
    <string name="overview">Overview:</string>
    <string name="please_edit_profile">You can edit the current user profile from the menu</string>
    <string name="welcome_msg">Welcome back</string>
    <string name="no_patients">You don\'t have any patients please add from the menu</string>
    <string name="action_menu_btn">menu</string>
    <string name="last_checkin">Last Check-in:</string>
    <string name="add_medication">Add Medication</string>
    <string name="remove_medication">Remove Medication</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="tag_name">Name:</string>
    <string name="tag_surname">Surname:</string>
    <string name="tag_email">Email:</string>
    <string name="tag_phone">Phone:</string>
    <string name="title_medication">Details of medication</string>
    <string name="hint_description">Description</string>
    <string name="empty_mediaction">You can\'t add a medication with no name of description</string>
    <string name="no_medication">The selected patient doesn\'t have any medications</string>
    <string name="delete_medication">Are you sure you want to delete the selected medication?</string>
    <string name="delete_patient">Are you sure you want to delete the selected patient?</string>
    <string name="attention">Attention</string>
    <string name="yes">Yes</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="logout">Logout</string>
    <string name="no">No</string>
    <string name="adding_patient">Are you sure you want to add this patient as yours?</string>
    <string name="no_available_patients">There are not any available patients</string>
    <string name="available_title">Available Patients</string>
    <string name="assigned_medication">Assigned Medication</string>
    <string name="add_medication_ok">The medication was added</string>
    <string name="ok_update_profile">Profile successfully updated!</string>
    <string name="please_add_contact">Please add contact information</string>
    <string name="email_or_phone_error">Please check your email</string>
    <string name="logged_out">Successfully logged out</string>
    <string name="remove_medication_ok">The medication was removed</string>
     <string name="remove_patient_ok">The patient was removed</string>
    <string name="checkin_desc">Start a checkup. Select below the classic way or the gestures way</string>
    <string name="gestures">Gestures</string>
    <string name="normal">Classic</string>
    <string name="no_phone">Please enter a correct number</string>
    <string name="email_doctor">Email doctor</string>
    <string name="call_doctor">Call doctor</string>
    <string name="no_email_doctor">The patient\'s doctor doesn\'t have an email address available</string>
    <string name="no_phone_doctor">The patient\'s doctor doesn\'t have a phone number available</string>
    <string name="no_email_patient">The patient doesn\'t have an email address available</string>
    <string name="no_phone_patient">The patient doesn\'t have a phone number available</string>
    <string name="send_email">Send mail...</string>
    <string name="no_email_client">There are no email clients installed</string>
    <string name="dob_tag">Date of Birth</string>
    <string name="alarm_title">It\'s time for your check up</string>
    <string name="time_tag">Notify times</string>
    <string name="no_doctor">The patient doesn\'t have any doctor yet</string>
    <string name="first_checkin_question">How bad is your mouth pain/sore throat?</string>
    <string name="second_checkin_question">Did you take your</string>
    <string name="third_checkin_question">Does your pain stop you from eating/drinking?</string>
    <string name="missing_questions">You must reply to all the questions in order to send them</string>
    <string name="email_or_phone_error_date">Please check your email or your telephone number or the date of birth</string>
<string name="well_controlled">Well-controlled</string>
<string name="moderate">Moderate</string>
<string name="severe">Severe</string>
<string name="some">Some</string>
<string name="question">Question</string>
<string name="eat">I can\'t eat</string>
<string name="fill_all_selected_alert_times">Please fill all the selected alert times</string>
<string name="email_patient">Email Patient</string>
<string name="call_patient">Call Patient</string>
<string name="valid_date">Please select a valid date</string>
<string name="search_title">Search</string>
<string name="search_hint">Search</string>
<string name="about">Info Patient</string>
<string name="start_tutorial">Start Tutorial</string>
<string name="title_tutorial">Start below the tutorial that explanes how to use the gestures in order to answer the questions or skip if you already did this</string>
<string name="title_tutorial1">In order to answer to a question YES perform the gesture below. Perform the gesture to go to the next step of the tutorial</string>
<string name="tutorial_step1">Tutorial - Step 1</string>
<string name="perform_gesture_again">Correct!!, please perform the gesture again</string>
<string name="title_tutorial2">In order to answer to a question NO perform the gesture below. Perform the gesture to go to the next step of the tutorial</string>
<string name="tutorial_step2">Tutorial - Step 2</string>
<string name="title_tutorial3">In order to answer the FIRST answer in a question perform the gesture below. Perform the gesture to go to the next step of the tutorial</string>
<string name="tutorial_step3">Tutorial - Step 3</string>
<string name="title_tutorial4">In order to answer the SECOND answer in a question perform the gesture below. Perform the gesture to go to the next step of the tutorial</string>
<string name="tutorial_step4">Tutorial - Step 4</string>
<string name="title_tutorial5">In order to answer the THIRD answer in a question perform the gesture below. Perform the gesture to go to the next step of the tutorial</string>
<string name="tutorial_step5">Tutorial - Step 5</string>
<string name="label_error_incorrect_phone">Incorrect phone</string>
<string name="hint_question1">Perform the ONE gesture to answer WELL-CONTROLLER, TWO gesture to answer MODERATE and THREE gesture to answer SEVERE</string>
<string name="hint_question2">Perform the YES gesture to answer YES and the NO gesture to answer NO</string>
<string name="hint_question3">Perform the ONE gesture to answer NO, TWO gesture to answer SOME and THREE gesture to answer I CAN\'T EAT</string>
</resources>