<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- the action bar menu that has add patient, remove patient, update profile -->
     <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"/>
        <item
        android:id="@+id/add"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/add_patient"/>
        <item
        android:id="@+id/remove"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_remove"
        android:title="@string/remove_patient"/>
        <item
        android:id="@+id/edit_profile"
        android:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_edit"
        android:title="@string/edit_profile"/>
          <item
        android:id="@+id/logout"
        android:showAsAction="never"
        android:title="@string/logout"/>

</menu>