<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- the action bar menu that has add patient, remove patient, update profile -->
        <item
        android:id="@+id/call_doctor"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_call"
        android:title="@string/call_doctor"/>
        <item
        android:id="@+id/email_doctor"
        android:showAsAction="ifRoom"
           android:icon="@drawable/ic_action_email"
        android:title="@string/email_doctor"/>
        <item
        android:id="@+id/edit_profile"
        android:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_edit"
        android:title="@string/edit_profile"/>
          <item
        android:id="@+id/logout"
        android:showAsAction="never"
        android:title="@string/logout"/>

</menu>