<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginScreenActivity"
    android:background="@drawable/back" >

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/name"
            android:layout_alignTop="@+id/name"
            android:gravity="center_vertical"
            android:text="@string/tag_name"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignLeft="@+id/surname"
            android:ems="10"
            android:hint="@string/hint_name"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/surname_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/surname"
            android:layout_alignTop="@+id/surname"
            android:gravity="center_vertical"
            android:text="@string/tag_surname"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_tag"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toRightOf="@+id/surname_tag"
            android:ems="10"
            android:hint="@string/hint_surname"
            android:singleLine="true" />

        <TextView
            android:id="@+id/email_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/email"
            android:layout_alignTop="@+id/email"
            android:gravity="center_vertical"
            android:text="@string/tag_email"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/surname_tag"
           android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignLeft="@+id/surname"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <TextView
            android:id="@+id/phone_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_below="@+id/email_tag"
            android:gravity="center_vertical"
            
            android:layout_alignTop="@+id/phone"
            android:layout_alignBottom="@+id/phone"
            android:inputType="phone"
            android:text="@string/tag_phone"
            android:textAppearance="@android:style/TextAppearance.Medium" />
        
         <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:focusable="false"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_tag"
            android:focusableInTouchMode="false"
        android:clickable="true"
           android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignLeft="@+id/surname"
            android:layout_alignRight="@+id/surname"/>
<!-- <Spinner -->
<!--             android:id="@+id/spinner" -->
<!--             android:layout_width="50dp" -->
<!--             android:layout_height="41dp" -->
<!--             android:background="@drawable/edit_box_drop_selector" -->
<!--             android:layout_below="@+id/email_tag" -->
<!--           android:layout_marginTop="@dimen/activity_vertical_margin" -->
<!--             android:layout_alignLeft="@+id/surname" -->
<!--             android:dropDownWidth="200dp"/> -->
<!--         <EditText -->
<!--             android:id="@+id/phone" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_below="@+id/email_tag" -->
<!--             android:layout_toRightOf="@+id/spinner" -->
<!--             android:layout_marginLeft="@dimen/activity_horizontal_margin" -->
<!--             android:layout_alignTop="@+id/spinner" -->
<!--             android:layout_alignBottom="@+id/spinner" -->
<!--             android:ems="10" -->
<!--             android:hint="@string/hint_phone" -->
<!--             android:inputType="phone" -->
<!--             android:singleLine="true" /> -->

        <ProgressBar
            android:id="@+id/progressBar1"
            style="@android:style/Widget.Holo.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />
    </RelativeLayout>

</ScrollView>